Fixed Pythagorean theorem on hw2

--- a/classNotes/5-loops/5-loops.Rmd
+++ b/classNotes/5-loops/5-loops.Rmd
@@ -202,12 +202,11 @@ for (i in seq(n)) {
 
 > A friend calls her programmer roommate and says, "while you're out, buy some milk"...her roommate never returned home.
 >
-> ![](images/laugh_emoji.png){ width=100 }
+<img src="images/laugh_emoji.png" width="100">
 
 ---
 # The `while` loop
 
---
 <br>
 .pull-left[
 ### Basic format:
@@ -229,10 +228,15 @@ Here's the general idea:
 ---
 # `for` vs. `while`
 
-- ### Use `for` loops when there is a _known_ number of iterations. 
-- ### Use `while` loops when there is an _unknown_ number of iterations.
+.pull-left[
+### Use `for` loops when there is a _known_ number of iterations. 
+]
+.pull-right[
+### Use `while` loops when there is an _unknown_ number of iterations.
+]
 
 ---
 # Practice: What will this return?
 
 [60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+
