--- a/classNotes/5-loops/5-loops.Rmd
+++ b/classNotes/5-loops/5-loops.Rmd
@@ -11,7 +11,14 @@ output:
 # Announcements
 
 --
-###What's with this `+` sign in the console?
+### 1) What's with this `+` sign in the console?
+
+--
+### 2) Do you like to draw? Leave your mark on EMSE 6574 by helping design a hex sticker!
+
+<img src="images/hexlogos.png" width="300">
+
+### See http://hexb.in/ for dimensions, etc. 
 
 ---
 # "Flow Control"
